--- a/main.html
+++ b/main.html
@@ -6,23 +6,23 @@
     
 </head>
 <body>
-    <div id="grid-container">
-    <div id="grid-item">1</div>
-    <div id="grid-item">2</div>
-    <div id="grid-item">3</div>
-    <div id="grid-item">4</div>
-    <div id="grid-item">5</div>
-    <div id="grid-item">6</div>
-    <div id="grid-item">7</div>
-    <div id="grid-item">8</div>
-    <div id="grid-item">9</div>
+    <div class="grid-container" id="grid-container">
+    <div class="grid-item" id="grid-item">1</div>
+    <div class="grid-item" id="grid-item">2</div>
+    <div class="grid-item" id="grid-item">3</div>
+    <div class="grid-item" id="grid-item">4</div>
+    <div class="grid-item" id="grid-item">5</div>
+    <div class="grid-item" id="grid-item">6</div>
+    <div class="grid-item" id="grid-item">7</div>
+    <div class="grid-item" id="grid-item">8</div>
+    <div class="grid-item" id="grid-item">9</div>
     </div>
    <label for="block_id">Enter Box Number:</label> 
    <input type="number" id="block_id" placeholder="plz Enter 1 to 9 " required>
    <label for="colour_id">Enter color Name</label>
     <input type="text" id="colour_id" placeholder="e.g red or #ffffff">
     <button id="change_button">Change Color</button>
-    <button id="Reset">reset Colors</button>
+    <button id="#reset_button">reset Colors</button>
     
 </body>
 </html>
