--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
     <div class="grid-item" id="grid-item">9</div>
     </div>
    <label for="block_id">Enter Box Number:</label> 
-   <input type="number" id="block_id" placeholder="plz Enter 1 to 9 " required>
+   <input type="number" id="block_id" placeholder="plz Enter 1 to 9" required>
    <label for="colour_id">Enter color Name</label>
     <input type="text" id="colour_id" placeholder="e.g red or #ffffff">
-    <button id="change_button">Change Color</button>
+    <button id="change_button">Change</button>
     <button id="#reset_button">reset Colors</button>
     
 </body>
