--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
    <label for="colour_id">Enter color Name</label>
     <input type="text" id="colour_id" placeholder="e.g red or #ffffff">
     <button id="change_button">Change</button>
-    <button id="#reset_button">reset Colors</button>
+    <button id="reset_button">Reset</button>
     
 </body>
 </html>
