--- a/main.html
+++ b/main.html
@@ -7,15 +7,15 @@
 </head>
 <body>
     <div class="grid-container" id="grid-container">
-    <div class="grid-item" id="grid-item">1</div>
-    <div class="grid-item" id="grid-item">2</div>
-    <div class="grid-item" id="grid-item">3</div>
-    <div class="grid-item" id="grid-item">4</div>
-    <div class="grid-item" id="grid-item">5</div>
-    <div class="grid-item" id="grid-item">6</div>
-    <div class="grid-item" id="grid-item">7</div>
-    <div class="grid-item" id="grid-item">8</div>
-    <div class="grid-item" id="grid-item">9</div>
+    <div class="grid-item" id="1">1</div>
+    <div class="grid-item" id="2">2</div>
+    <div class="grid-item" id="3">3</div>
+    <div class="grid-item" id="4">4</div>
+    <div class="grid-item" id="5">5</div>
+    <div class="grid-item" id="6">6</div>
+    <div class="grid-item" id="7">7</div>
+    <div class="grid-item" id="8">8</div>
+    <div class="grid-item" id="9">9</div>
     </div>
    <label for="block_id">Enter Box Number:</label> 
    <input type="number" id="block_id" placeholder="plz Enter 1 to 9" required>
