--- a/main.html
+++ b/main.html
@@ -5,24 +5,23 @@
     <title>3×3Box</title>
     
 </head>
-<body>
-    <div class="grid-container" id="grid-container">
-    <div class="grid-item" id="1">1</div>
-    <div class="grid-item" id="2">2</div>
-    <div class="grid-item" id="3">3</div>
-    <div class="grid-item" id="4">4</div>
-    <div class="grid-item" id="5">5</div>
-    <div class="grid-item" id="6">6</div>
-    <div class="grid-item" id="7">7</div>
-    <div class="grid-item" id="8">8</div>
-    <div class="grid-item" id="9">9</div>
+<body> <div class="grid-container" id="grid-container">
+        <div class="grid-item" id="1">1</div>
+        <div class="grid-item" id="2">2</div>
+        <div class="grid-item" id="3">3</div>
+        <div class="grid-item" id="4">4</div>
+        <div class="grid-item" id="5">5</div>
+        <div class="grid-item" id="6">6</div>
+        <div class="grid-item" id="7">7</div>
+        <div class="grid-item" id="8">8</div>
+        <div class="grid-item" id="9">9</div>
     </div>
-   <label for="block_id">Enter Box Number:</label> 
-   <input type="number" id="block_id" placeholder="plz Enter 1 to 9" required>
-   <label for="colour_id">Enter color Name</label>
+
+    <label for="block_id">Enter Box Number:</label> 
+    <input type="number" id="block_id" placeholder="Enter 1 to 9" required>
+    <label for="colour_id">Enter Color Name:</label>
     <input type="text" id="colour_id" placeholder="e.g red or #ffffff">
     <button id="change_button">Change</button>
     <button id="reset_button">Reset</button>
-    
 </body>
 </html>
