--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
     <label for="block_id">Enter Box Number:</label> 
     <input type="number" id="block_id" placeholder="Enter 1 to 9" required>
     <label for="colour_id">Enter Color Name:</label>
-    <input type="text" id="colour_id" placeholder="e.g red or #ffffff">
+    <input type="text" id="colour_id" >
     <button id="change_button">Change</button>
     <button id="reset_button">Reset</button>
 </body>
