--- a/main.html
+++ b/main.html
@@ -5,7 +5,8 @@
     <title>3×3Box</title>
     
 </head>
-<body> <div class="grid-container" id="grid-container">
+<body> 
+	<span class="grid-container" id="grid-container">
         <div class="grid-item" id="1">1</div>
         <div class="grid-item" id="2">2</div>
         <div class="grid-item" id="3">3</div>
@@ -15,7 +16,7 @@
         <div class="grid-item" id="7">7</div>
         <div class="grid-item" id="8">8</div>
         <div class="grid-item" id="9">9</div>
-    </div>
+    </span>
 
     <label for="block_id">Enter Box Number:</label> 
     <input type="number" id="block_id" placeholder="Enter 1 to 9" required>
